se agrego formulario de adopcion

--- a/assets/styles.css/style.css
+++ b/assets/styles.css/style.css
@@ -54,4 +54,10 @@ img { height: auto;
 
 }
 
+.formularios{
+       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+       color: white;
+       padding-left: 20px;
+
+    }
 
